--- a/characters.html
+++ b/characters.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<div class="container">
     <h1>Characters</h1>
     <table>
         <thead>
@@ -25,6 +26,7 @@
         <tbody class="table__body">
         </tbody>
     </table>
+</div>
         <script src="./js/characters.js"></script>
         <script src="./js/gabor.js"></script>
 </body>
